[package]
edition = "2021"
name = "embassy-stm32f1-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false

[dependencies]
# Change stm32f103c8 to your chip name, if necessary.
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "exti",
    "stm32f103rc",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = "0.7.17"
embedded-io-async = "0.6.1"
once_cell = { version = "1.19.0", default-features = false, features = [
    "alloc",
    "critical-section",
] }
embedded-graphics = "0.8.1"
stm32-metapac = "16.0.0"
display-interface-i2c = "0.5.0"
embedded-hal-async = "1.0.0"
static_cell = "2.1.0"

[dependencies.ssd1306]
version = "0.10.0"
features = ["async"]

[profile.dev]
opt-level = "s"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
